// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionTitleComponent matches snapshot 1`] = `
<div
  className="position-details-header-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Test Position
    </title>
    <meta
      content="Test Position 00003027"
      property="og:title"
    />
    <meta
      content="a description"
      property="og:description"
    />
    <meta
      content="http://localhost/"
      property="og:url"
    />
  </HelmetWrapper>
  <div
    className="position-details-header"
  >
    <div
      className="usa-grid-full positions-details-header-grid padded-main-content"
    >
      <div
        className="usa-width-two-thirds"
      >
        <div
          className="usa-grid-full"
        >
          <div
            className="usa-width-one-half header-title-container"
          >
            <div
              className="position-details-header-title"
            >
              <h1>
                Test Position
              </h1>
            </div>
            <div
              className="post-title"
            >
              Location: 
              Freetown, Sierra Leone
            </div>
          </div>
          <div
            className="usa-width-one-half title-actions-section"
          >
            <Connect(FavoriteContainer)
              isPV={false}
              useButtonClass={true}
              useLongText={true}
              useSpinnerWhite={true}
            />
          </div>
        </div>
      </div>
    </div>
    <img
      alt="United States flag background"
      className="position-details-header-image"
      src="/assets/img/us-flag.jpg"
    />
  </div>
  <div
    className="offset-bid-button-container"
  >
    <div
      className="unavailable-tooltip"
    >
      <Tooltip
        animateFill={true}
        animation="shift"
        arrow={true}
        arrowSize="regular"
        className=""
        delay={0}
        disabled={false}
        distance={10}
        duration={375}
        followCursor={false}
        hideDelay={0}
        hideDuration={375}
        hideOnClick={true}
        html={null}
        inertia={false}
        interactive={false}
        interactiveBorder={2}
        multiple={false}
        offset={0}
        onHidden={[Function]}
        onHide={[Function]}
        onRequestClose={[Function]}
        onShow={[Function]}
        onShown={[Function]}
        popperOptions={Object {}}
        position="bottom"
        size="regular"
        sticky={false}
        stickyDuration={200}
        style={Object {}}
        tabIndex="0"
        tag="div"
        theme="light"
        title="This position is not available to bid on, but can be favorited for the future."
        touchHold={false}
        trigger="mouseenter focus"
        unmountHTMLWhenHide={false}
        zIndex={9999}
      >
        <FontAwesome
          name="question-circle"
        />
        Why can't I add this position to my bid list?
      </Tooltip>
    </div>
    <Component />
  </div>
</div>
`;

exports[`PositionTitleComponent matches snapshot when context.client === true 1`] = `
<div
  className="position-details-header-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Test Position
    </title>
    <meta
      content="Test Position 00003027"
      property="og:title"
    />
    <meta
      content="a description"
      property="og:description"
    />
    <meta
      content="http://localhost/"
      property="og:url"
    />
  </HelmetWrapper>
  <div
    className="position-details-header"
  >
    <div
      className="usa-grid-full positions-details-header-grid padded-main-content"
    >
      <div
        className="usa-width-two-thirds"
      >
        <div
          className="usa-grid-full"
        >
          <div
            className="usa-width-one-half header-title-container"
          >
            <div
              className="position-details-header-title"
            >
              <h1>
                Test Position
              </h1>
            </div>
            <div
              className="post-title"
            >
              Location: 
              Freetown, Sierra Leone
            </div>
          </div>
          <div
            className="usa-width-one-half title-actions-section"
          />
        </div>
      </div>
    </div>
    <img
      alt="United States flag background"
      className="position-details-header-image"
      src="/assets/img/us-flag.jpg"
    />
  </div>
  <div
    className="offset-bid-button-container"
  >
    <div
      className="unavailable-tooltip"
    >
      <Tooltip
        animateFill={true}
        animation="shift"
        arrow={true}
        arrowSize="regular"
        className=""
        delay={0}
        disabled={false}
        distance={10}
        duration={375}
        followCursor={false}
        hideDelay={0}
        hideDuration={375}
        hideOnClick={true}
        html={null}
        inertia={false}
        interactive={false}
        interactiveBorder={2}
        multiple={false}
        offset={0}
        onHidden={[Function]}
        onHide={[Function]}
        onRequestClose={[Function]}
        onShow={[Function]}
        onShown={[Function]}
        popperOptions={Object {}}
        position="bottom"
        size="regular"
        sticky={false}
        stickyDuration={200}
        style={Object {}}
        tabIndex="0"
        tag="div"
        theme="light"
        title="This position is not available to bid on, but can be favorited for the future."
        touchHold={false}
        trigger="mouseenter focus"
        unmountHTMLWhenHide={false}
        zIndex={9999}
      >
        <FontAwesome
          name="question-circle"
        />
        Why can't I add this position to my bid list?
      </Tooltip>
    </div>
    <Component />
  </div>
</div>
`;
